Overrides now need to be explicit!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"allowImportingTsExtensions": true,
 		"noEmit": true,
 		"noImplicitAny": true,
+		"noImplicitOverride": true
 	},
 	"exclude": [
 		"./examples/3d",
