--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,7 @@
                 }
             }
         ],
-        "capitalized-comments": "error",
+        "capitalized-comments": "off",
         "@typescript-eslint/explicit-member-accessibility": "error",
         "no-throw-literal": "error",
         "max-len": [
