--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
             "error",
             2
         ],
+        "@typescript-eslint/no-unused-vars": "warn",
         "linebreak-style": [
             "error",
             "unix"
