--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,56 +1,59 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "@typescript-eslint",
+    "eslint-plugin-eqeqeq-fix"
+  ],
+  "rules": {
+    // "eqeqeq": "warn",
+    "eqeqeq-fix/eqeqeq": "warn",
+    "indent": [
+      "error",
+      2
     ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "linebreak-style": [
+      "error",
+      "unix"
     ],
-    "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "@typescript-eslint/no-unused-vars": "warn",
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "require-jsdoc": [
-            "warn", {
-                "require": {
-                    "FunctionDeclaration": true,
-                    "MethodDefinition": true,
-                    "ClassDeclaration": true,
-                    "ArrowFunctionExpression": false,
-                    "FunctionExpression": true
-                }
-            }
-        ],
-        "capitalized-comments": "off",
-        "@typescript-eslint/explicit-member-accessibility": "error",
-        "no-throw-literal": "error",
-        "max-len": [
-            "warn", {
-                "code": 80
-            }
-        ]
-    }
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "require-jsdoc": [
+      "warn", {
+        "require": {
+          "FunctionDeclaration": true,
+          "MethodDefinition": true,
+          "ClassDeclaration": true,
+          "ArrowFunctionExpression": false,
+          "FunctionExpression": true
+        }
+      }
+    ],
+    "capitalized-comments": "off",
+    "@typescript-eslint/explicit-member-accessibility": "error",
+    "no-throw-literal": "error",
+    "max-len": [
+      "warn", {
+        "code": 80
+      }
+    ]
+  }
 }
